Music, with volume adjuster, added. Chat started(especially wrap() function). Some ProgramSquareEditor fixes, plus the ability to add Images from the res/images folder during run time onto the screen/square.